--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <li><a href="#">Contact Us</a></li>
             </ul>
             <div class="buttons">
-                <a href="/docs/index.html" class="signin">Sign In</a>
-                <a href="/docs/index.html" class="signup">Sign Up</a>
+                <a href="index2.html" class="signin">Sign In</a>
+                <a href="index2.html" class="signup">Sign Up</a>
             </div>
         </nav>
     </header>
@@ -35,7 +35,7 @@
                 Welcome to Kudosware's resume submission portal. Please submit your resume by clicking the 'Submit' button below.
             </p>
             <div class="buttons">
-                <a href="/docs/index.html" class="join">Submit Now</a>
+                <a href="index2.html" class="join">Submit Now</a>
                 <a href="#" class="learn">Learn More</a>
             </div>
         </div>
