--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 Welcome to Kudosware's resume submission portal. Please submit your resume by clicking the 'Submit' button below.
             </p>
             <div class="buttons">
-                <a href="/docs/index.html" class="join">Submit Now</a>
+                <a href="index2.html" class="join">Submit Now</a>
                 <a href="#" class="learn">Learn More</a>
             </div>
         </div>
