--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <li><a href="#">Contact Us</a></li>
             </ul>
             <div class="buttons">
-                <a href="/docs/index.html" class="signin">Sign In</a>
-                <a href="/docs/index.html" class="signup">Sign Up</a>
+                <a href="index2.html" class="signin">Sign In</a>
+                <a href="index2.html" class="signup">Sign Up</a>
             </div>
         </nav>
     </header>
