--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>Signup for Job-Seeker</h2>
-        <form id="signupForm" action="https://testing-app-1.onrender.com" method="POST" enctype="multipart/form-data">
+        <form id="signupForm" action="https://testing-app-1.onrender.com/signup" method="POST" enctype="multipart/form-data">
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required>
             
