--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div class="hero">
             <h2>Submit Your Resume</h2>
             <p>
-                Welcome to Kudosware's resume submission portal. Please submit your resume by clicking the 'Submit' button below.
+                Welcome to YourHR it's a job search service designed to help job seekers find job roles based on their qualifications and preferences.
             </p>
             <div class="buttons">
-                <a href="index2.html" class="join">Submit Now</a>
+                <a href="index2.html" class="join">YourHR</a>
                 <a href="#" class="learn">Learn More</a>
             </div>
         </div>
