--- a/index2.html
+++ b/index2.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup for JobSeeker</title>
+    <title>Your HR</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h2>Signup for Job-Seeker</h2>
+        <h2>YourHR Signup</h2>
         <form id="signupForm" action="https://testing-app-1.onrender.com/signup" method="POST" enctype="multipart/form-data">
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required>
