--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kudosware-Site</title>
+    <title>Your-HR</title>
     <link rel="stylesheet" href="styles1.css">
 </head>
 <body>
     <header class="header">
         <nav class="navbar">
-            <h2 class="logo"><a href="#">Kudosware</a></h2>
+            <h2 class="logo"><a href="#">YourHR</a></h2>
             <input type="checkbox" id="menu-toggle">
             <label for="menu-toggle" id="hamburger-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
